# prometheus_alerts_poc

./: .gitignore  Dockerfile  README.md  alert.rules.yml  alertmanager.yml  docker-compose.yml  prometheus.yml  pyproject.toml
notifications_poc/: app.py
