[tool.poetry]
name = "notifications-poc"
version = "0.1.0"
description = ""
authors = ["BerentM <berentm@protonmail.com>"]
readme = "README.md"
packages = [{include = "notifications_poc"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
prometheus-client = "^0.14.1"
prometheus-fastapi-instrumentator = "^5.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
